openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sberTech-deployment
spec:
  selector:
    matchLabels:
      app: sberTech
  replicas: 1
  template:
    metadata:
      labels:
        app: sberTech
    spec:
      containers:
        - name: sberTech
          image: soppeallod/sbertech
          ports:
            - containerPort: 8080
