openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sber-tech-service
spec:
  selector:
    app: sber-tech
  ports:
    - port: 8080
      targetPort: 8080
