openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sber-tech-route
spec:
  to:
    kind: Service
    name: sber-tech-service
  port:
    targetPort: 8080
